# gh_atom_feed

./: Dockerfile  get_var.py  justfile  pyproject.toml
.github/workflows/: build.yml
src/gh_atom_feed/: functions.py  main.py  models.py  sender.py
src/gh_atom_feed/functions/: github.py
src/gh_atom_feed/models/: commit.py  filter.py  issue.py
