[project]
name = "gh-atom-feed"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "feedparser>=6.0.11",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_atom_feed"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
build = {cmd = "docker buildx build . -t mio2/gh_atom_feed:$(uv run get_var.py)"}
push = {cmd = "docker push mio2/gh_atom_feed:$(uv run get_var.py)"}
